# geo

./: LICENSE  README.md  cabal.project  flake.nix  geo.cabal  hie.yaml
.github/workflows/: CI.yaml
app/: Main.hs
src/: Dynamic.hs  Expr.hs  Lib.hs  Multivector.hs  Polynomial.hs  Signature.hs  Util.hs  Weird.hs
test/: Spec.hs
